--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -90,6 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:prompt="@string/spinner_semester"
                 android:dropDownWidth="match_parent" />
 
             <Spinner
@@ -97,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:prompt="@string/spinner_course"
                 android:dropDownWidth="match_parent" />
 
             <Button
