--- a/app/src/main/res/layout/recyclerview_reported_question.xml
+++ b/app/src/main/res/layout/recyclerview_reported_question.xml
@@ -26,21 +26,21 @@
 
         <TextView
             android:id="@+id/textView_reported_question"
-            android:layout_width="157dp"
+            android:layout_width="130dp"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
             android:gravity="center|center_vertical"
             android:textAlignment="center" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/button_see_report_question"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/action_view_reported_question" />
 
