--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -38,6 +38,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#ffffff"
+                        android:spinnerMode="dialog"
+                        android:prompt="@string/spinner_semester"
                         android:dropDownWidth="match_parent" />
 
                 </LinearLayout>
@@ -52,6 +54,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#ffffff"
+                        android:spinnerMode="dialog"
+                        android:prompt="@string/spinner_course"
                         android:dropDownWidth="match_parent" />
 
                 </LinearLayout>
@@ -66,6 +70,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#ffffff"
+                        android:spinnerMode="dialog"
+                        android:prompt="@string/spinner_subject"
                         android:dropDownWidth="match_parent" />
 
                 </LinearLayout>
