--- a/app/src/main/res/layout/activity_admin_edit_profile.xml
+++ b/app/src/main/res/layout/activity_admin_edit_profile.xml
@@ -85,6 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:spinnerMode="dialog"
+                android:prompt="@string/spinner_semester"
                 android:dropDownWidth="match_parent" />
 
             <Spinner
@@ -92,6 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:spinnerMode="dialog"
+                android:prompt="@string/spinner_course"
                 android:dropDownWidth="match_parent" />
 
             <Button
