--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -26,6 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:spinnerMode="dialog"
+                android:prompt="@string/spinner_course"
                 android:dropDownWidth="match_parent" />
 
             <Spinner
@@ -33,6 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:spinnerMode="dialog"
+                android:prompt="@string/spinner_semester"
                 android:dropDownWidth="match_parent" />
 
             <Spinner
@@ -40,6 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:spinnerMode="dialog"
+                android:prompt="@string/spinner_subject"
                 android:dropDownWidth="match_parent" />
 
             <Button
