--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,3 +1,9 @@
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -62,7 +68,9 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_name"
                     android:inputType="text"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:enabled="false"
+                    android:focusable="false"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -76,12 +84,14 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:enabled="false"
+                    android:focusable="false"/>
 
             </android.support.design.widget.TextInputLayout>
 
             <Spinner
-                android:id="@+id/spinner_semester_admin_edit_profile"
+                android:id="@+id/spinner_semester_edit_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
@@ -89,7 +99,7 @@
                 android:dropDownWidth="match_parent" />
 
             <Spinner
-                android:id="@+id/spinner_course_admin_edit_profile"
+                android:id="@+id/spinner_course_edit_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
@@ -108,3 +118,13 @@
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#ffffff"/>
+
+</android.support.v4.widget.DrawerLayout>
