--- a/app/src/main/res/layout/recyclerview_reported_question.xml
+++ b/app/src/main/res/layout/recyclerview_reported_question.xml
@@ -16,13 +16,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-       <TextView
+      <!-- <TextView
             android:id="@+id/textView_admin_user_name"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_marginRight="6dp"
             android:gravity="center|center_vertical"
-            android:textAlignment="center" />
+            android:textAlignment="center" />-->
 
         <TextView
             android:id="@+id/textView_reported_question"
@@ -36,11 +36,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button_see_report_question"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/action_view_reported_question" />
 
