--- a/app/src/main/res/layout/fragment_question_report.xml
+++ b/app/src/main/res/layout/fragment_question_report.xml
@@ -8,7 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/white">
 
     <ScrollView
         android:id="@+id/scrollView_question_report_form"
