--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
 
 
     <color name="white">#ffffff</color>
-    <color name="green">#66bb6a</color>
-    <color name="red">#e53935</color>
+    <color name="green">#aef4b1</color>
+    <color name="red">#ff7c79</color>
 
     <!--Drawer-->
     <color name="colorDrawerPrimary">#d32f2f</color>
