Update dependencies, fix bugs, some small tweaks

--- a/app/src/main/res/layout/activity_admin_verify_question.xml
+++ b/app/src/main/res/layout/activity_admin_verify_question.xml
@@ -161,7 +161,7 @@
                 android:id="@+id/button_verify_question"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
-                android:text="Verificiraj" />
+                android:text="Ispravi" />
 
         </LinearLayout>
     </ScrollView>
